<?xml version="1.0"?>
<package format="3">
  <name>sigyn_testicle_twister</name>
  <version>0.0.1</version>
  <description>ROS2 package for controlling a gripper servo via PWM on Raspberry Pi.</description>
  <maintainer email="mike@wimblerobotics.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
